change config example

--- a/config.yml.example
+++ b/config.yml.example
@@ -6,3 +6,7 @@ bot:
         password: ProxyUserPass
         host: 8.8.8.8
         port: 443
+parking_camera:
+    ip: '8.8.8.8'
+    username: CameraUser
+    password: CameraUserPass # in my case in base64
